[package]
name = "pllm"
version = "0.3.0"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/pllm"
repository = "https://github.com/yybit/pllm"
description = "Portable LLM"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
byteorder = "1.5.0"
num_enum = "0.7.2"
rand = "0.8.5"
