[package]
name = "pllm"
version = "0.4.1"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/pllm"
repository = "https://github.com/yybit/pllm"
description = "Portable LLM"
readme = "README.md"
include = ["src/*.rs", "examples/*.rs", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
byteorder = "1.5.0"
num_enum = "0.7.2"
rand = "0.8.5"
num-traits = "0.2.18"

rayon = "1.9.0"
half = "2.4.0"

[dev-dependencies]
# memmap2 = "0.9.4"
# ndarray = { version = "0.15.6", features = ["blas"] }
# blas-src = { version = "0.10.0", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas"] }
# blas-src = { version = "0.10.0", default-features = false, features = [
#     "accelerate",
# ] }

[[example]]
name = "dot"

[[example]]
name = "llama2c"

[[example]]
name = "gemma"
